update test data

--- a/code/test.ipynb
+++ b/code/test.ipynb
@@ -2,41 +2,41 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "68\n"
+      "39\n"
      ]
     }
    ],
    "source": [
-    "s = \"The body color varies from medium brown to gold-ish to beige-white; and occasionally, is marked with dark brown spots, especially on the limbs.\"\n",
-    "subs = \"and occasionally, is marked with dark brown spots, especially on the limbs.\"\n",
+    "s = \"The story of Christmas is based on the biblical accounts given in the Gospel of Matthew, namely - and the Gospel of Luke, specifically -.\"\n",
+    "subs = \"namely - and\"\n",
     "print(s.find(subs))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'and occasionally, is marked with dark brown spots, especially on the limbs.'"
+       "47"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "s[68:len(s)]"
+    "len(subs) + 39"
    ]
   },
   {
