add 2 more examples

--- a/code/test.ipynb
+++ b/code/test.ipynb
@@ -102,32 +102,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[46, 105]"
+       "[96, 136]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "sentence = \"They were sure that the grounds were haunted. || They wrote a book about it called An Adventure in 1911. || They used the names Elizabeth Morison and Frances Lamont.\"\n",
+    "sentence = \"He toured with the IPO in the spring of 1990, their first-ever performance in the Soviet Union. || They played in Moscow and Leningrad. || He toured with them again in 1994 in China and India.\"\n",
     "\n",
     "import re\n",
     "[m.start() for m in re.finditer('\\|\\|', sentence)]\n",
     "\n",
-    "[2, 46, 48, 0]"
+    "# [2, 46, 48, 0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -136,13 +136,13 @@
        "'||'"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "sentence[46:48]"
+    "sentence[96:98]"
    ]
   },
   {
