--- a/data/analysis/analysis.ipynb
+++ b/data/analysis/analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -40,12 +40,13 @@
     "\n",
     "# Load batch 1 data\n",
     "batch_num = 1\n",
-    "# files = [x for x in os.listdir('../annotated/') if x.startswith('batch_' + str(batch_num))]\n",
-    "files = [\n",
-    "    'batch_1_anton.json',\n",
-    "    'batch_1_ayush.json',\n",
-    "    'batch_1_kelly.json'\n",
-    "]\n",
+    "files = [x for x in os.listdir('../annotated/') if x.startswith('batch_' + str(batch_num))]\n",
+    "files = [x for x in files if 'rachel' not in x]\n",
+    "# files = [\n",
+    "#     'batch_1_anton.json',\n",
+    "#     'batch_1_ayush.json',\n",
+    "#     'batch_1_kelly.json'\n",
+    "# ]\n",
     "for filename in files:\n",
     "    with open('../annotated/' + filename) as f:\n",
     "        individual_annotation = json.load(f)\n",
@@ -60,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -89,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -124,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -140,7 +141,7 @@
        "  'size': 0.09278350515463918}]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -152,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -165,7 +166,7 @@
        "  'annotation': ['good', 'yes', 'no']}]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -177,29 +178,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 65,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "deletion -> (13, 14, 8)\n",
-      "insertion -> (2, 15, 1)\n",
-      "reorder -> (2, 3, 3)\n",
-      "substitution -> (9, 17, 13)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Example: Agreement between annotators on edit types\n",
-    "for edit_type in ['deletion', 'insertion', 'reorder', 'substitution']:\n",
-    "    print(f'{edit_type} -> {calculate_agreement(data, edit_type, drop_no_spans=True)}')"
+    "# for edit_type in ['deletion', 'insertion', 'reorder', 'substitution']:\n",
+    "#     print(f'{edit_type} -> {calculate_agreement(data, edit_type, drop_no_spans=True)}')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -238,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -260,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -282,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -1450,7 +1440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -2578,6 +2568,50 @@
    "source": [
     "sankey_combined(data)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Repetition\n",
+      "HIT 23 \t anton \t T5\n",
+      "HIT 23 \t ayush \t T5\n",
+      "\n",
+      "Contradiction\n",
+      "HIT 8 \t kelly \t T5\n",
+      "\n",
+      "Hallucination\n",
+      "\n",
+      "Irrelevant\n",
+      "HIT 29 \t anton \t Controllable\n",
+      "HIT 31 \t anton \t ASSET 2\n",
+      "HIT 23 \t kelly \t T5\n",
+      "HIT 50 \t kelly \t ASSET 1\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "for error in [Error.REPETITION, Error.CONTRADICTION, Error.HALLUCINATION, Error.IRRELEVANT]:\n",
+    "    print(error.value)\n",
+    "    for sent in data:\n",
+    "        for ann in sent['processed_annotations']:\n",
+    "            if ann['error_type'] == error:\n",
+    "                print(f'HIT {sent[\"id\"]+1} \\t {sent[\"user\"]} \\t {system_name_mapping[sent[\"system\"]]}')\n",
+    "    print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
