create agreement notebook

--- a/data/analysis/analysis.ipynb
+++ b/data/analysis/analysis.ipynb
@@ -2723,6 +2723,7 @@
     }
    ],
    "source": [
+    "# Show the distribution of edit and sentence scores\n",
     "score_distribution(data)"
    ]
   },
@@ -2752,6 +2753,7 @@
     }
    ],
    "source": [
+    "# Get the best and worst performing sentences\n",
     "best, worst = best_performing(data)"
    ]
   },
@@ -2769,6 +2771,7 @@
     }
    ],
    "source": [
+    "# Get setences with a score of 0\n",
     "zero_scoring = zero_scoring_sents(data)"
    ]
   },
@@ -2791,14 +2794,8 @@
     }
    ],
    "source": [
-    "# Show correlation with SimpEval\n",
-    "scores = [(int(sum(sent['simpeval_scores'])/5), sent['score']) for sent in data]\n",
-    "pts = [p for p in scores if p[0] != 0]\n",
-    "plt.scatter([p[0] for p in pts], [p[1] for p in pts], c =\"red\", alpha=0.2)\n",
-    "plt.xlabel('Average SimpEval score')\n",
-    "plt.ylabel('Our score')\n",
-    "plt.title(f'SimpEval Correlation ({len(pts)} sentences)')\n",
-    "plt.show()"
+    "# Show the agreement with SimpEval\n",
+    "simpeval_agreement(data)"
    ]
   },
   {
@@ -2885,7 +2882,7 @@
     "}\n",
     "for ann in range(0, 3):\n",
     "    pts = [(i, score) for i, score in enumerate([x[ann] for x in final])]\n",
-    "    plt.scatter([p[1] for p in pts], [p[0] for p in pts], c =ann_mapping[ann], alpha=0.5, label=ann)\n",
+    "    plt.scatter([p[1] for p in pts], [p[0] for p in pts], c =ann_mapping[ann], alpha=0.5, label=f'Annotator {ann+1}')\n",
     "plt.xlabel('Our score')\n",
     "plt.ylabel('SENT ID')\n",
     "plt.title(f'Agreement between annotators ({len(pts)} sentences)')\n",
