add new MUSS batch

--- a/data/analysis/agreement.ipynb
+++ b/data/analysis/agreement.ipynb
@@ -11,7 +11,7 @@
      "text": [
       "Loading files: ['../annotated/batch_1_anton.json', '../annotated/batch_1_ayush.json', '../annotated/batch_1_kelly.json', '../annotated/batch_2_vinayak.json', '../annotated/batch_2_vishnesh.json', '../annotated/batch_3_anton.json', '../annotated/batch_3_ayush.json', '../annotated/batch_3_kelly.json', '../annotated/batch_4_rachel.json', '../annotated/batch_4_vinayak.json', '../annotated/batch_4_vishnesh.json']\n",
       "\n",
-      "Found users: {'ayush', 'vishnesh', 'kelly', 'rachel', 'anton', 'vinayak'}\n",
+      "Found users: {'kelly', 'vinayak', 'anton', 'rachel', 'vishnesh', 'ayush'}\n",
       "\n",
       "Couldn't process grammar for annotation: ['positive', '', '', '']\n",
       "Couldn't process grammar for annotation: ['positive', 'minor', '', '']\n",
@@ -30,6 +30,7 @@
     "from util import *\n",
     "from graphs import *\n",
     "from agreement import *\n",
+    "from scoring import *\n",
     "\n",
     "data = []\n",
     "files = [f'../annotated/{x}' for x in os.listdir('../annotated/')]\n",
@@ -62,50 +63,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
-    "content_errors = [\n",
-    "    Error.HALLUCINATION,\n",
-    "    Error.CONTRADICTION,\n",
-    "    Error.REPETITION,\n",
-    "    Error.IRRELEVANT,\n",
-    "    Error.COREFERENCE,\n",
-    "    Error.INFORMATION_REWRITE\n",
-    "]\n",
+    "# To delete: creates MUSS batch\n",
+    "out = copy.deepcopy(data)\n",
+    "simpeval = []\n",
+    "files = [i for j in [[f'../simpeval/{x}/{y}' for y in os.listdir('../simpeval/'+x)] for x in os.listdir('../simpeval/')] for i in j]\n",
+    "for filename in files:\n",
+    "    with open(filename) as f:\n",
+    "        individual_annotation = json.load(f)\n",
+    "        simpeval += individual_annotation\n",
+    "outMuss = []\n",
+    "for i in range(len(out)):\n",
+    "    sent = out[i]\n",
+    "    system = sent['system']\n",
+    "    simpeval_sents = [entry for entry in simpeval if entry['Original'] == sent['original']]\n",
+    "    final = []\n",
+    "    for entry in simpeval_sents:\n",
+    "        for sentence_type in ['Deletions', 'Paraphrases', 'Splittings']:\n",
+    "            for entry_sent in entry[sentence_type]:\n",
+    "                if entry_sent[2] == 'systems/muss_untokenized.txt':\n",
+    "                    outMuss.append(entry_sent[1])\n",
+    "                    final.append({'sentence_type': sentence_type.lower(), 'score': entry_sent[0], 'spans': entry_sent[3:]})\n",
+    "    scores = [x['score'] for x in final]\n",
+    "    out[i]['simpeval_scores'] = scores\n",
     "\n",
-    "# Scores for \"good\" edits (excl. less info)\n",
-    "rating_mapping_simplification = {\n",
-    "    0: 1,\n",
-    "    1: 4,\n",
-    "    2: 9\n",
-    "}\n",
     "\n",
-    "# Scores for less info\n",
-    "rating_mapping_deletion = {\n",
-    "    0: -4,\n",
-    "    1: -1,\n",
-    "    2: 1,\n",
-    "    3: 4\n",
-    "}\n",
+    "muss = []\n",
+    "for sent in outMuss:\n",
+    "    if sent not in muss:\n",
+    "        muss.append(sent)\n",
     "\n",
-    "# Scores for errors\n",
-    "rating_mapping_error = {\n",
-    "    0: 1,\n",
-    "    1: 4,\n",
-    "    2: 9,\n",
-    "    3: 16\n",
-    "}\n",
+    "orig_sent = [x['original'] for x in out]\n",
+    "orig = []\n",
+    "for sent in orig_sent:\n",
+    "    if sent not in orig:\n",
+    "        orig.append(sent)\n",
     "\n",
-    "# Could consider a \"critical deletion\" as a content error\n",
+    "batches = [range(0,10), range(10,20), range(20,24), range(24,28)]\n",
     "\n",
-    "# Anything not in this is lexical error, grammar error is separate"
+    "outs = []\n",
+    "for batch in batches:\n",
+    "    out = []\n",
+    "    for id_ in batch:\n",
+    "        simp_spans = []\n",
+    "        if '||' in muss[id_]:\n",
+    "            simp_spans.append([\n",
+    "                2,\n",
+    "                muss[id_].index('||'),\n",
+    "                muss[id_].index('||') + 2,\n",
+    "                0\n",
+    "            ])\n",
+    "        out.append({\n",
+    "            'id': id_,\n",
+    "            'original': orig[id_],\n",
+    "            \"original_spans\": [],\n",
+    "            'simplified': muss[id_],\n",
+    "            \"simplified_spans\": simp_spans,\n",
+    "            'system': 'systems/muss_untokenized.txt'\n",
+    "        })\n",
+    "    outs.append(out)\n",
+    "\n",
+    "b1 = outs[0] + outs[2]\n",
+    "b2 = outs[1] + outs[3]\n",
+    "\n",
+    "num = 5\n",
+    "with open(f'../batches/batch_{num}.json', 'w', encoding='utf-8') as f:\n",
+    "    json.dump(b1, f, ensure_ascii=False, indent=4)\n",
+    "\n",
+    "num = 6\n",
+    "with open('batch_6.json', 'w', encoding='utf-8') as f:\n",
+    "    json.dump(b2, f, ensure_ascii=False, indent=4)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -122,75 +157,7 @@
     }
    ],
    "source": [
-    "def calculate_annotation_score(annotation, edit_bonuses):\n",
-    "    edit_score = 0\n",
-    "\n",
-    "    # This will only be null for 'no impact' same info and bad trivial insertions\n",
-    "    if annotation['rating'] != None and annotation['rating'] != '':\n",
-    "        if annotation['type'] == Quality.ERROR:\n",
-    "            edit_score = rating_mapping_error[annotation['rating']]\n",
-    "        elif annotation['information_impact'] == Information.LESS:\n",
-    "            edit_score = rating_mapping_deletion[annotation['rating']]\n",
-    "        elif annotation['information_impact'] == Information.MORE or annotation['information_impact'] == Information.SAME:\n",
-    "            edit_score = rating_mapping_simplification[annotation['rating']]\n",
-    "    \n",
-    "    # Add bonuses for good edits\n",
-    "    if annotation['type'] == Quality.QUALITY or annotation['type'] == Quality.TRIVIAL:\n",
-    "        impact = annotation['information_impact']\n",
-    "        if impact == Information.LESS:\n",
-    "            # good deletion\n",
-    "            edit_score *= edit_bonuses['good_deletion']\n",
-    "        elif impact == Information.MORE:\n",
-    "            if annotation['type'] == Quality.TRIVIAL:\n",
-    "                # good trivial insertion\n",
-    "                edit_score *= edit_bonuses['good_trivial_insertion']\n",
-    "            elif annotation['type'] == Quality.QUALITY:\n",
-    "                # good insertion\n",
-    "                edit_score *= edit_bonuses['good_insertion']\n",
-    "        elif impact == Information.SAME:\n",
-    "            if annotation['edit_type'] == 'substitution':\n",
-    "                # good paraphrase\n",
-    "                edit_score *= edit_bonuses['good_paraphrase']\n",
-    "            else:\n",
-    "                # good syntax change\n",
-    "                edit_score *= edit_bonuses['good_syntax']\n",
-    "\n",
-    "    # Unnecessary insertions have no severity...\n",
-    "    if annotation['error_type'] == Error.UNNECESSARY_INSERTION:\n",
-    "        # Assigning it to a 'somewhat' severity error\n",
-    "        edit_score = 2\n",
-    "\n",
-    "    if annotation['grammar_error'] == True:\n",
-    "        edit_score = abs(edit_score) * edit_bonuses['grammar_error']\n",
-    "\n",
-    "    if annotation['error_type'] in content_errors:\n",
-    "        edit_score = abs(edit_score) * edit_bonuses['content_error']\n",
-    "\n",
-    "    # Calculate the annotation size\n",
-    "    annotation_size = annotation['size']\n",
-    "    # Less distinction between large edits\n",
-    "    if edit_bonuses['size_calculation'] == 'log':\n",
-    "        annotation_size = 1 + math.log10(annotation_size + 0.1)\n",
-    "    elif edit_bonuses['size_calculation'] == 'square':\n",
-    "        annotation_size = annotation_size*annotation_size\n",
-    "    \n",
-    "    return edit_score * annotation_size\n",
-    "\n",
-    "def calculate_sentence_score(sent, edit_bonuses):\n",
-    "    # Calculate the score of each annotation\n",
-    "    for annotation in sent['processed_annotations']:\n",
-    "        annotation['score'] = calculate_annotation_score(annotation, edit_bonuses)\n",
-    "    \n",
-    "    # Simply sum the scores for each annotation\n",
-    "    return sum(annotation['score'] for annotation in sent['processed_annotations'])\n",
-    "\n",
-    "def calculate_sentence_scores(data, edit_bonuses):\n",
-    "    out = copy.deepcopy(data)\n",
-    "    for sent in out:\n",
-    "        sent['score'] = calculate_sentence_score(sent, edit_bonuses)\n",
-    "    return out\n",
-    "\n",
-    "edit_bonuses = {\n",
+    "parameters = {\n",
     "    'good_deletion': 7,\n",
     "    'good_trivial_insertion': 8,\n",
     "    'good_insertion': 2,\n",
@@ -201,7 +168,7 @@
     "    'size_calculation': 'log'\n",
     "}\n",
     "\n",
-    "data = calculate_sentence_scores(data, edit_bonuses)\n",
+    "data = calculate_sentence_scores(data, parameters)\n",
     "\n",
     "# Show the agreement with SimpEval\n",
     "simpeval_agreement(data)"
@@ -209,13 +176,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f2a638c476914876b157fa1db9d717b8",
+       "model_id": "742cb18c33d642fa89739c7473cbdf51",
        "version_major": 2,
        "version_minor": 0
       },
@@ -232,7 +199,7 @@
        "<function __main__.series(data, good_deletion, good_trivial_insertion, good_insertion, good_paraphrase, good_syntax, grammar_error, content_error, size_calculation, average, user)>"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -272,7 +239,7 @@
     "    good_syntax=(-20,20,0.5), \n",
     "    grammar_error=(-20,20,0.5), \n",
     "    content_error=(-20,20,0.5),\n",
-    "    size_calculation=['linear', 'log', 'square'],\n",
+    "    size_calculation=['linear', 'log', 'square', 'none'],\n",
     "    average=[True, False],\n",
     "    user=['all'] + sorted(list(set([sent['user'] for sent in data])))\n",
     ")"
