fix batch numbering

--- a/data/analysis/agreement.ipynb
+++ b/data/analysis/agreement.ipynb
@@ -11,7 +11,7 @@
      "text": [
       "Loading files: ['../annotated/batch_1_anton.json', '../annotated/batch_1_ayush.json', '../annotated/batch_1_kelly.json', '../annotated/batch_2_vinayak.json', '../annotated/batch_2_vishnesh.json', '../annotated/batch_3_anton.json', '../annotated/batch_3_ayush.json', '../annotated/batch_3_kelly.json', '../annotated/batch_4_rachel.json', '../annotated/batch_4_vinayak.json', '../annotated/batch_4_vishnesh.json']\n",
       "\n",
-      "Found users: {'kelly', 'vinayak', 'anton', 'rachel', 'vishnesh', 'ayush'}\n",
+      "Found users: {'anton', 'vishnesh', 'rachel', 'vinayak', 'ayush', 'kelly'}\n",
       "\n",
       "Couldn't process grammar for annotation: ['positive', '', '', '']\n",
       "Couldn't process grammar for annotation: ['positive', 'minor', '', '']\n",
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,12 +129,22 @@
     "b1 = outs[0] + outs[2]\n",
     "b2 = outs[1] + outs[3]\n",
     "\n",
+    "id_ = 0\n",
+    "for sent in b1:\n",
+    "    sent['id'] = id_\n",
+    "    id_ += 1\n",
+    "\n",
+    "id_ = 0\n",
+    "for sent in b2:\n",
+    "    sent['id'] = id_\n",
+    "    id_ += 1\n",
+    "\n",
     "num = 5\n",
     "with open(f'../batches/batch_{num}.json', 'w', encoding='utf-8') as f:\n",
     "    json.dump(b1, f, ensure_ascii=False, indent=4)\n",
     "\n",
     "num = 6\n",
-    "with open('batch_6.json', 'w', encoding='utf-8') as f:\n",
+    "with open('../batches/batch_6.json', 'w', encoding='utf-8') as f:\n",
     "    json.dump(b2, f, ensure_ascii=False, indent=4)"
    ]
   },
