add logic to query openai

--- a/data/analysis/scoring.ipynb
+++ b/data/analysis/scoring.ipynb
@@ -11,7 +11,7 @@
      "text": [
       "Loading files: ['../annotated/batch_1_anton.json', '../annotated/batch_1_ayush.json', '../annotated/batch_1_kelly.json', '../annotated/batch_2_vinayak.json', '../annotated/batch_2_vishnesh.json', '../annotated/batch_3_anton.json', '../annotated/batch_3_ayush.json', '../annotated/batch_3_kelly.json', '../annotated/batch_4_rachel.json', '../annotated/batch_4_vinayak.json', '../annotated/batch_4_vishnesh.json']\n",
       "\n",
-      "Found users: {'anton', 'ayush', 'rachel', 'kelly', 'vinayak', 'vishnesh'}\n",
+      "Found users: {'vishnesh', 'vinayak', 'anton', 'ayush', 'kelly', 'rachel'}\n",
       "\n",
       "Couldn't process grammar for substitution: ['positive', '', '', '']. Assuming 'no'...\n",
       "Couldn't process positive rating for substitution: ['positive', '', '', '']. Assuming 'somewhat'...\n",
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -126,13 +126,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5dd9b90ee28a4a8aa27e0f553aec2ec9",
+       "model_id": "0151ee0f0af940d49aa5c21faf98e1a2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -149,7 +149,7 @@
        "<function __main__.series(data, average, user, good_deletion=7, good_trivial_insertion=8, good_insertion=2, good_paraphrase=2, good_syntax=6, grammar_error=-1.5, content_error=-2, size_calculation='log', display_distribution=False)>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
