add ability to split data for annotators

--- a/data/gpt-3/query.ipynb
+++ b/data/gpt-3/query.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,6 +146,125 @@
     "import json\n",
     "with open('gpt3-output.json', 'w') as f:\n",
     "    json.dump(out_new, f)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Split Sentences for Annotators"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# The problem with this is that it may randomly assign the same sentences\n",
+    "# to an annotator. This isn't easy to fix..."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 179,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[]\n",
+      "[]\n",
+      "[]\n",
+      "[]\n",
+      "[]\n",
+      "[]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "import copy\n",
+    "\n",
+    "# Create split of data for annotators\n",
+    "annotators = [\n",
+    "    'anton', 'ayush', 'kelly', 'rachel', 'vinayak', 'vishnesh'\n",
+    "]\n",
+    "\n",
+    "out = {}\n",
+    "for ann in annotators:\n",
+    "    out[ann] = []\n",
+    "\n",
+    "seen = {}\n",
+    "tmp = copy.deepcopy(data)\n",
+    "\n",
+    "SENT_PER_ANN = int(len(data)*2 / len(annotators))\n",
+    "if (len(data)*2) % len(annotators):\n",
+    "    print(\"Sentences are non-divisible I think...\")\n",
+    "\n",
+    "ann_pointer = 0\n",
+    "while len(tmp) != 0:\n",
+    "    sent = random.choice(tmp)\n",
+    "    if sent in out[annotators[ann_pointer]]:\n",
+    "        print('seen before')\n",
+    "\n",
+    "    if sent not in seen:\n",
+    "        seen[sent] = 0\n",
+    "    seen[sent] += 1\n",
+    "    out[annotators[ann_pointer]].append(sent)\n",
+    "    ann_pointer += 1\n",
+    "    if ann_pointer == len(annotators):\n",
+    "        ann_pointer = 0\n",
+    "    if seen[sent] == 2:\n",
+    "        tmp.remove(sent)\n",
+    "\n",
+    "# Sanity check: annotator with duplicate sentences, should be all\n",
+    "# empty\n",
+    "import collections\n",
+    "sents = [x for x in out.values()]\n",
+    "for a in sents:\n",
+    "    print([count for item, count in collections.Counter(a).items() if count > 1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 180,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "anton 10\n",
+      "ayush 10\n",
+      "kelly 10\n",
+      "rachel 10\n",
+      "vinayak 10\n",
+      "vishnesh 10\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Final sentence split per annotator\n",
+    "for key in out.keys():\n",
+    "    print(key, len(out[key]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 186,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "annotator = 'vishnesh'\n",
+    "\n",
+    "clip = \"\"\n",
+    "for sent in out[annotator]:\n",
+    "    clip += f'{sent}\\n\\n\\n\\n'\n",
+    "\n",
+    "import pyperclip\n",
+    "pyperclip.copy(clip)"
    ]
   }
  ],
