--- a/data/gpt-3/query.ipynb
+++ b/data/gpt-3/query.ipynb
@@ -2,13 +2,88 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import json\n",
+    "import random\n",
     "import openai\n",
     "import csv\n",
+    "import copy"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Sample ASSET Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('He settled in London, devoting himself chiefly to practical teaching.',\n",
+       "  'He lived in London. He was a teacher.')]"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Loads ASSET's 10 simplifications\n",
+    "def load_asset(path):\n",
+    "    with open(f'{path}/asset.test.orig', encoding='utf-8') as f:\n",
+    "        orig = f.read().splitlines()\n",
     "\n",
+    "    simplifications = []\n",
+    "    for i in range(10):\n",
+    "        with open(f'{path}/asset.test.simp.{i}', encoding='utf-8') as f:\n",
+    "            simplifications.append(f.read().splitlines())\n",
+    "\n",
+    "    asset = {}\n",
+    "\n",
+    "    counter = 0\n",
+    "    for sent in range(len(orig)):\n",
+    "        asset[counter] = {\n",
+    "            'original': orig[sent],\n",
+    "            'simplifications': [x[counter] for x in simplifications]\n",
+    "        }\n",
+    "        counter += 1\n",
+    "    \n",
+    "    return asset\n",
+    "\n",
+    "# Randomly sample 5 ASSET sentences + 1 of their simplifications\n",
+    "def sample_asset(asset, num_samples=5):\n",
+    "    out = []\n",
+    "    for sample in random.sample(list(asset.items()), num_samples):\n",
+    "        out.append((sample[1]['original'], random.choice(sample[1]['simplifications'])))\n",
+    "    return out\n",
+    "\n",
+    "asset = load_asset('asset/dataset')\n",
+    "sample_asset(asset, num_samples=1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Query OpenAI"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Get API key & configure OpenAI API\n",
     "with open('.SECRET') as f:\n",
     "    secret = f.read().strip()\n",
@@ -27,51 +102,259 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [],
    "source": [
-    "sample_prompt = \"\"\"\n",
-    "Sentence: The library needs to be configured with your account's secret key.\n",
-    "Simplify the above sentence.\n",
-    "\"\"\"\n",
-    "\n",
     "def callGPT(prompt):\n",
     "    response = openai.Completion.create(\n",
     "        engine=\"text-davinci-002\", \n",
     "        prompt=prompt, \n",
+    "        temperature=1,\n",
+    "        top_p=0.96,\n",
+    "        frequency_penalty=0,\n",
+    "        presence_penalty=0,\n",
     "        max_tokens=256)\n",
     "    responses = [x['text'] for x in response['choices']]\n",
     "    if len(responses) > 1:\n",
     "        print(f\"More than one response! {responses}\")\n",
     "    responses = responses[0]\n",
-    "    return responses\n",
-    "\n",
-    "callGPT(sample_prompt)"
+    "    return responses"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 103,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# sample_prompt = \"\"\"\n",
+    "# Sentence: The library needs to be configured with your account's secret key.\n",
+    "# Simplify the above sentence.\n",
+    "# \"\"\"\n",
+    "\n",
+    "# callGPT(sample_prompt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Please rewrite the following complex sentence in order to make it easier to understand by non-native speakers of English. You can do so by replacing complex words with simpler synonyms (i.e. paraphrasing), deleting unimportant information (i.e. compression), and/or splitting a long complex sentence into several simpler ones. The final simplified sentence needs to be grammatical, fluent, and retain the main ideas of its original counterpart without altering its meaning.\n",
+      "\n",
+      "The architecture of Winchester College is a diverse set of architectural styles, reflecting the multiple periods of building from the college's foundation in 1382, through additions in the medieval and Early Modern periods, to a major expansion of accommodation in the Victorian era and then further extensions at the turn of the 20th century and more recently.\n",
+      "\n",
+      "\n",
+      "The architecture of Winchester College is a diverse set of architectural styles. It reflects the multiple periods of building from the college's foundation in 1382, through additions in the medieval and Early Modern periods, to a major expansion of accommodation in the Victorian era. There were also further extensions at the turn of the 20th century and more recently.\n"
+     ]
+    }
+   ],
+   "source": [
+    "prompt = \"Please rewrite the following complex sentence in order to make it easier to understand by non-native speakers of English. You can do so by replacing complex words with simpler synonyms (i.e. paraphrasing), deleting unimportant information (i.e. compression), and/or splitting a long complex sentence into several simpler ones. The final simplified sentence needs to be grammatical, fluent, and retain the main ideas of its original counterpart without altering its meaning.\\n\\n%s\"\n",
+    "print(prompt % data[0])\n",
+    "print(callGPT(prompt % data[0]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "out = []\n",
+    "for sent in data:\n",
+    "    out.append(callGPT(prompt % sent))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "out_cleaned = [sent.replace('\\n', '') for sent in out]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('gpt3-output.json', 'w') as f:\n",
+    "    json.dump(out_cleaned, f, indent=4)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Query OpenAI with Few-Shot"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "few_shot_template = \"\"\"\n",
+    "Examples: %s\n",
+    "\"\"\"\n",
+    "\n",
+    "example_template = \"\"\"\n",
+    "Input: %s\n",
+    "Output: %s\n",
+    "\"\"\"\n",
+    "\n",
+    "input_template = \"\"\"\n",
+    "Input: %s\n",
+    "Output:\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Examples: \n",
+      "Input: The spacecraft consists of two main elements: the NASA Cassini orbiter, named after the Italian-French astronomer Giovanni Domenico Cassini, and the ESA Huygens probe, named after the Dutch astronomer, mathematician and physicist Christiaan Huygens.\n",
+      "Output: The spacecraft's two main elements are the NASA Cassini orbiter, named after the Italian-French astronomer Giovanni Domenico Cassini, and the ESA Huygens probe, named after the Dutch astronomer, mathematician and physicist Christiaan Huygens.\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(few_shot_template % (example_template % sample_asset(asset, num_samples=1)[0]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Please rewrite the following complex sentence in order to make it easier to understand by non-native speakers of English. You can do so by replacing complex words with simpler synonyms (i.e. paraphrasing), deleting unimportant information (i.e. compression), and/or splitting a long complex sentence into several simpler ones. The final simplified sentence needs to be grammatical, fluent, and retain the main ideas of its original counterpart without altering its meaning.\n",
+      "\n",
+      "Examples: \n",
+      "Input: People with cardiomyopathy are often at risk of arrhythmia or sudden cardiac death or both.\n",
+      "Output: People with heart disease are often at risk of irregular heartbeats or sudden cardiac death.\n",
+      "\n",
+      "Input: Its episodes were broadcast on the ABC network from its debut on September 21, 1993 to March 1, 2005.\n",
+      "Output: It was broadcast on ABC September 21, 1993 to March 1, 2005.\n",
+      "\n",
+      "Input: Railway Gazette International is a monthly business journal covering the railway, metro, light rail and tram industries worldwide.\n",
+      "Output: Railway Gazette International is a monthly business journal. It covers the railway, metro, light rail and tram industries worldwide.\n",
+      "\n",
+      "Input: Before 1980, a section of the Commonwealth Railways Central Australian line passed along the western side of the Simpson Desert.\n",
+      "Output: Before 1980 a section of Commonwealth Railways Central Australian line went along the west side of the Simpson Desert.\n",
+      "\n",
+      "Input: They are culturally akin to the coastal peoples of Papua New Guinea.\n",
+      "Output: They are related to the peoples of Papua New Guinea.\n",
+      "\n",
+      "Please rewrite the following complex sentence in order to make it easier to understand by non-native speakers of English. You can do so by replacing complex words with simpler synonyms (i.e. paraphrasing), deleting unimportant information (i.e. compression), and/or splitting a long complex sentence into several simpler ones. The final simplified sentence needs to be grammatical, fluent, and retain the main ideas of its original counterpart without altering its meaning.\n",
+      "\n",
+      "Input: The architecture of Winchester College is a diverse set of architectural styles, reflecting the multiple periods of building from the college's foundation in 1382, through additions in the medieval and Early Modern periods, to a major expansion of accommodation in the Victorian era and then further extensions at the turn of the 20th century and more recently.\n",
+      "Output:\n",
+      " The architecture of Winchester College includes many styles from different periods, beginning with the college's foundation in 1382. Additions were made in the medieval and Early Modern periods, followed by a large expansion in the Victorian era. There have also been extensions at the turn of the 20th century and more recently.\n"
+     ]
+    }
+   ],
+   "source": [
+    "example_text = \"\"\n",
+    "for example in sample_asset(asset, num_samples=5):\n",
+    "    example_text += (example_template % example)\n",
+    "sent = data[0]\n",
+    "gpt_input = (prompt[:-3] + (few_shot_template % example_text) + prompt[:-3] + (input_template % sent)[:-1])\n",
+    "print(gpt_input)\n",
+    "print(callGPT(gpt_input))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 147,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "out = []\n",
+    "for sent in data:\n",
+    "    example_text = \"\"\n",
+    "    for example in sample_asset(asset, num_samples=5):\n",
+    "        example_text += (example_template % example)\n",
+    "    gpt_input = (prompt[:-3] + (few_shot_template % example_text) + prompt[:-3] + (input_template % sent)[:-1])\n",
+    "    out.append(callGPT(gpt_input))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 151,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "out_cleaned = []\n",
+    "for sent in out:\n",
+    "    cleaned = sent\n",
+    "    if cleaned.startswith(' '):\n",
+    "        cleaned = cleaned[1:]\n",
+    "    if cleaned.startswith('\\n\\n'):\n",
+    "        cleaned = cleaned[2:]\n",
+    "    out_cleaned.append(cleaned)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 152,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('gpt3-few-shot-output.json', 'w') as f:\n",
+    "    json.dump(out_cleaned, f, indent=4)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Compare Multiple Prompts"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
    "metadata": {},
    "outputs": [],
    "source": [
     "prompts = {\n",
     "\"naive\": \"\"\"\n",
     "Sentence: %s\n",
-    "Simply the above sentence.\n",
+    "Simplify the above sentence.\n",
     "\"\"\",\n",
     "\"a_lot\": \"\"\"\n",
     "Sentence: %s\n",
-    "Simply the above sentence a lot.\n",
+    "Simplify the above sentence a lot.\n",
     "\"\"\",\n",
     "\"content_a_lot\": \"\"\"\n",
     "Sentence: %s\n",
-    "Simply the content in the above sentence a lot.\n",
+    "Simplify the content in the above sentence a lot.\n",
     "\"\"\",\n",
     "\"as_possible\": \"\"\"\n",
     "Sentence: %s\n",
-    "Simply the above sentence as much as possible.\n",
+    "Simplify the above sentence as much as possible.\n",
     "\"\"\",\n",
     "\"asset_instructions\": \"\"\"\n",
     "You are given a sentence that need to be rewritten so that they use simpler English. This means that you should reduce the number of difficult words or idioms, simplify complex phrasing, delete information that may not be relevant, and make the sentence more straight-forward. This could be accomplished by applying different transformations to the original sentences. In this task, we ask you to use paraphrasing, compression and/or sentence splitting.\n",
@@ -83,16 +366,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Sentence: The proletarians have nothing to lose but their chains.\n",
-      "Simply the content in the above sentence a lot.\n",
-      "\n"
+     "ename": "KeyError",
+     "evalue": "2",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-96-f2fa5856f282>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# Example using the first prompt\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[0msentence\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m\"The proletarians have nothing to lose but their chains.\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mprompts\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mreplace\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'%s'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0msentence\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mKeyError\u001b[0m: 2"
      ]
     }
    ],
@@ -104,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -184,9 +469,6 @@
     }
    ],
    "source": [
-    "import random\n",
-    "import copy\n",
-    "\n",
     "# Create split of data for annotators\n",
     "annotators = [\n",
     "    'anton', 'ayush', 'kelly', 'rachel', 'vinayak', 'vishnesh'\n",
@@ -229,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -253,7 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
