clean openai query

--- a/data/gpt-3/query.ipynb
+++ b/data/gpt-3/query.ipynb
@@ -242,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 154,
    "metadata": {},
    "outputs": [
     {
@@ -252,35 +252,35 @@
       "Please rewrite the following complex sentence in order to make it easier to understand by non-native speakers of English. You can do so by replacing complex words with simpler synonyms (i.e. paraphrasing), deleting unimportant information (i.e. compression), and/or splitting a long complex sentence into several simpler ones. The final simplified sentence needs to be grammatical, fluent, and retain the main ideas of its original counterpart without altering its meaning.\n",
       "\n",
       "Examples: \n",
-      "Input: People with cardiomyopathy are often at risk of arrhythmia or sudden cardiac death or both.\n",
-      "Output: People with heart disease are often at risk of irregular heartbeats or sudden cardiac death.\n",
+      "Input: Tajikistan, Turkmenistan and Uzbekistan border Afghanistan to the north, Iran to the west, Pakistan to the south and the People's Republic of China to the east.\n",
+      "Output: Tajikistan, Turkmenistan and Uzbekistan border Afghanistan to the north. They also border Iran to the west, Pakistan to the south and the People's Republic of China to the east.\n",
       "\n",
-      "Input: Its episodes were broadcast on the ABC network from its debut on September 21, 1993 to March 1, 2005.\n",
-      "Output: It was broadcast on ABC September 21, 1993 to March 1, 2005.\n",
+      "Input: The two former presidents were later separately charged with mutiny and treason for their roles in the 1979 coup and the 1980 Gwangju massacre.\n",
+      "Output: The two former presidents were later charged with mutiny and treason for their roles in the 1979 coup and the 1980 Gwangju massacre.\n",
       "\n",
-      "Input: Railway Gazette International is a monthly business journal covering the railway, metro, light rail and tram industries worldwide.\n",
-      "Output: Railway Gazette International is a monthly business journal. It covers the railway, metro, light rail and tram industries worldwide.\n",
+      "Input: As a result, although many mosques will not enforce violations, both men and women when attending a mosque must adhere to these guidelines.\n",
+      "Output: Many mosques will not enforce violations.  But, both men and women must follow the rules when attending a mosque.\n",
       "\n",
-      "Input: Before 1980, a section of the Commonwealth Railways Central Australian line passed along the western side of the Simpson Desert.\n",
-      "Output: Before 1980 a section of Commonwealth Railways Central Australian line went along the west side of the Simpson Desert.\n",
+      "Input: That is because real estate, businesses and other assets in the underground economies of the Third World can not be used as collateral to raise capital to finance industrial and commercial expansion.\n",
+      "Output: Real estate, businesses and other assets in Third World black market economies can't be used as collateral to raise money to finance industrial and commercial growth.\n",
       "\n",
-      "Input: They are culturally akin to the coastal peoples of Papua New Guinea.\n",
-      "Output: They are related to the peoples of Papua New Guinea.\n",
+      "Input: This was absorbed into battalions being formed for XI International Brigade.\n",
+      "Output: This was put into battalions formed by Xi international brigade.\n",
       "\n",
       "Please rewrite the following complex sentence in order to make it easier to understand by non-native speakers of English. You can do so by replacing complex words with simpler synonyms (i.e. paraphrasing), deleting unimportant information (i.e. compression), and/or splitting a long complex sentence into several simpler ones. The final simplified sentence needs to be grammatical, fluent, and retain the main ideas of its original counterpart without altering its meaning.\n",
       "\n",
       "Input: The architecture of Winchester College is a diverse set of architectural styles, reflecting the multiple periods of building from the college's foundation in 1382, through additions in the medieval and Early Modern periods, to a major expansion of accommodation in the Victorian era and then further extensions at the turn of the 20th century and more recently.\n",
-      "Output:\n",
-      " The architecture of Winchester College includes many styles from different periods, beginning with the college's foundation in 1382. Additions were made in the medieval and Early Modern periods, followed by a large expansion in the Victorian era. There have also been extensions at the turn of the 20th century and more recently.\n"
+      "Output:\n"
      ]
     }
    ],
    "source": [
-    "example_text = \"\"\n",
-    "for example in sample_asset(asset, num_samples=5):\n",
-    "    example_text += (example_template % example)\n",
-    "sent = data[0]\n",
-    "gpt_input = (prompt[:-3] + (few_shot_template % example_text) + prompt[:-3] + (input_template % sent)[:-1])\n",
+    "def create_few_shot_input(sent, num_samples=5):\n",
+    "    example_text = \"\"\n",
+    "    for example in sample_asset(asset, num_samples=num_samples):\n",
+    "        example_text += (example_template % example)\n",
+    "    return (prompt[:-3] + (few_shot_template % example_text) + prompt[:-3] + (input_template % sent)[:-1])\n",
+    "gpt_input = create_few_shot_input(data[0])\n",
     "print(gpt_input)\n",
     "print(callGPT(gpt_input))"
    ]
@@ -291,12 +291,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Danger! Queries OpenAI ~$0.02 per sentence\n",
     "out = []\n",
     "for sent in data:\n",
-    "    example_text = \"\"\n",
-    "    for example in sample_asset(asset, num_samples=5):\n",
-    "        example_text += (example_template % example)\n",
-    "    gpt_input = (prompt[:-3] + (few_shot_template % example_text) + prompt[:-3] + (input_template % sent)[:-1])\n",
+    "    gpt_input = create_few_shot_input(sent)\n",
     "    out.append(callGPT(gpt_input))"
    ]
   },
